# code-complexity-measure

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  README.md  ROADMAP.md  action.yml  analysis.md  plan.md  pyproject.toml
.claude/skills/refactor-complexity/: SKILL.md
.github/workflows/: action-test.yml  publish.yml  tests.yml
complexity_accounting/: __init__.py  __main__.py  base_parser.py  cache.py  churn.py  config.py  coupling.py  cpp_parser.py  duplication.py  git_tracker.py  go_parser.py  halstead.py  html_report.py  java_parser.py  js_parser.py  models.py  plugin.py  rust_parser.py  sarif.py  scanner.py  ts_parser.py
examples/: complexity-check.yml
tests/: conftest.py  opensandbox_results.json  test___init__.py  test___main__.py  test_base_parser.py  test_cache.py  test_churn.py  test_class_metrics.py  test_config.py  test_coupling.py  test_cpp_parser.py  test_duplication.py  test_e2e.py  test_git_tracker.py  test_go_parser.py  test_halstead.py  test_html_report.py  test_java_parser.py  test_js_parser.py  test_main.py  test_models.py  test_opensandbox.py  test_plugin.py  test_rust_parser.py  test_sarif.py  test_scanner.py  test_ts_parser.py
tests/fixtures/: sample.c  sample.cpp  sample.go  sample.java  sample.js  sample.rs  sample.ts
tests/fixtures/sample_project/: .complexity.toml  complex.py  moderate.py  simple.py  utils.py
