[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "complexity-accounting"
version = "0.1.0"
description = "Measure Net Complexity Score for codebases — cognitive complexity, trend tracking, CI integration"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "libcst>=1.0.0",
    "tomli>=1.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
go = ["tree-sitter>=0.21.0", "tree-sitter-go>=0.21.0"]
java = ["tree-sitter>=0.21.0", "tree-sitter-java>=0.21.0"]
cpp = ["tree-sitter>=0.21.0", "tree-sitter-cpp>=0.21.0"]
js = ["tree-sitter>=0.21.0", "tree-sitter-javascript>=0.21.0"]
ts = ["tree-sitter>=0.21.0", "tree-sitter-typescript>=0.21.0"]
rust = ["tree-sitter>=0.23.0", "tree-sitter-rust>=0.23.0"]
test = ["pytest>=7.0", "pytest-cov>=4.0"]
dev = ["complexity-accounting[test,go,java,cpp,js,ts,rust]"]

[project.scripts]
complexity-scan = "complexity_accounting.scanner:main"
complexity-accounting = "complexity_accounting.__main__:main"

[tool.setuptools.packages.find]
include = ["complexity_accounting*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "e2e: end-to-end tests requiring git",
    "go: tests requiring tree-sitter-go",
    "java: tests requiring tree-sitter-java",
    "cpp: tests requiring tree-sitter-cpp",
    "js: tests requiring tree-sitter-javascript",
    "ts: tests requiring tree-sitter-typescript",
    "rust: tests requiring tree-sitter-rust",
]

[tool.coverage.run]
source = ["complexity_accounting"]

[tool.coverage.report]
fail_under = 85
show_missing = true
